--- a/src/less/index.less
+++ b/src/less/index.less
@@ -127,7 +127,7 @@
     right: 0;
     width: 80%;
     top: 0px;
-    bottom: 0;
+    bottom: 30px;
     background-color: white;
     overflow: scroll;
     -webkit-overflow-scrolling: touch;
@@ -138,7 +138,7 @@
     right: 0;
     width: 80%;
     top: 0px;
-    bottom: 0;
+    bottom: 30px;
     background-color: white;
 }
 
@@ -147,7 +147,7 @@
     width: 80%;
     right: 1px;
     top: 0px;
-    bottom: 0;
+    bottom: 30px;
     background-color: white;
 }
 
@@ -199,7 +199,7 @@
     -webkit-border-radius: 5px;
     overflow: hidden;
     color: @gray;
-    .task-status-2,.task-status--1 {
+    .task-status--1,.task-status-8 {
         padding: 3px 12px;
         color: @brand-primary;
         border: 1px solid @brand-primary;
@@ -466,6 +466,8 @@
         position: absolute;
         top: 51px;
         bottom: 0;
+        left: 0;
+        right: 0;
         overflow: scroll;
     }
 }
