--- a/src/less/uploader.less
+++ b/src/less/uploader.less
@@ -69,8 +69,11 @@
 		width: 100%;
 		height: 130px;
 		line-height: 130px;
-		border: 1px solid @brand-primary;
-		background-color: @gray-lighter;
+		// border: 1px solid @brand-primary;
+		// background-color: @gray-lighter;
+		background-image: url("../images/upload_1.png");
+		background-size:100%;
+		background-repeat: no-repeat;
 	}
 	.progress {
 		background-color: transparent;
