--- a/src/templates/modify_signin_password.html
+++ b/src/templates/modify_signin_password.html
@@ -1,5 +1,5 @@
 <!-- by dribehance <dribehance.kksdapp.com> -->
-<div ui-content-for="title">修改登录密码</div>
+<div ui-content-for="title">{{"Change Password" | translate}}</div>
 <div ui-content-for="navbarAction"></div>
 <div ui-content-for="backAction">
     <span class="btn" ng-click="back()"><i class="fa fa-chevron-left"></i></span>
@@ -28,7 +28,7 @@
                     <!-- <span class="tip text-warning" ng-show="modifyForm.password.$invalid && modifyForm.password.$dirty">必填,密码至少8位</span> -->
                 </div>
                 <div class="kk-input-group">
-                    <button type="submit" class="btn btn-warning block full-width">修改登录密码</button>
+                    <button type="submit" class="btn btn-warning block full-width">{{"Change Password" | translate}}</button>
                 </div>
             </form>
         </div>
