--- a/src/templates/release_task.html
+++ b/src/templates/release_task.html
@@ -282,7 +282,7 @@
 <div ui-content-for="modals">
     <div class="modal modal-overlay" ui-if="district_panel" ui-state='district_panel'>
         <!-- <div class="modal-backdrop in"></div> -->
-        <div class="modal-dialog" style="margin:0">
+        <div class="modal-dialog scrollable-dialog" style="margin:0">
             <div class="modal-content">
                 <div class="modal-header text-primary clearfix">
                     <div class="pull-left section section-condensed bg-transparent" ui-turn-off="district_panel">
