--- a/src/templates/report.html
+++ b/src/templates/report.html
@@ -28,7 +28,7 @@
                 <span class="pull-right" ng-show="input.details == ''">{{"Please Fill in" | translate}}</span>
                 <div class="section section-wide" ng-show="input.details != ''">{{input.details}}</div>
             </div>
-            <div class="list-group-item" flow-btn flow-attrs="{accept:'image/*'}">
+            <div class="list-group-item needsclick" flow-btn flow-attrs="{accept:'image/*'}">
                 <span class="list-group-item-text">{{"Upload Photos" | translate}}</span>
                 <i class="text-gray-light fa fa-chevron-right pull-right"></i>
             </div>
