--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -220,7 +220,7 @@
             </div>
         </div>
         <div class="section text-right">
-            <a class="btn btn-warning" ng-click="share()">分享我们</a>
+            <a class="btn btn-warning" ng-click="share()">{{"Share the App" | translate}}</a>
         </div>
     </div>
 </div>
