--- a/src/templates/translator.html
+++ b/src/templates/translator.html
@@ -207,7 +207,10 @@
                     <h4 class="modal-title text-center">{{"Authentication Detail" | translate}}</h4>
                 </div>
                 <div class="modal-body">
-                    <img ng-src="{{staticImageUrl+authen}}" class="block full-width" ng-repeat="authen in authens" />
+                    <div class="section section-wide text-center" ng-repeat="identify in translator.userIdentities">
+                        <img ng-src="{{staticImageUrl+identify.cover}}" class="block full-width" />
+                        <h4>{{identify.title}}</h4>
+                    </div>
                 </div>
             </div>
         </div>
